tests/ui/structs/struct-fields-dupe.stderr
error[E0062]: field `foo` specified more than once
  --> $DIR/struct-fields-dupe.rs:8:9
   |
LL |         foo: 0,
   |         ------ first use of `foo`
LL |         foo: 0
   |         ^^^ used more than once

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0062`.
